Fixed spelling error
